2005-12-07  Adrian Straetling  <straetling@de.ibm.com>

	* lib/target-supports.exp (check_effective_target_sync_char_short):
	Add s390*.

2005-12-06  Janis Johnson  <janis187@us.ibm.com>

	* lib/gcc-dg.exp (cleanup-dump): Remove options from test name.

2005-12-06  Roger Sayle  <roger@eyesopen.com>

	* g++.dg/warn/Wstring-literal-comparison-1.C: New test case.
	* g++.dg/warn/Wstring-literal-comparison-2.C: Likewise.
	* g++.dg/warn/Wstring-literal-comparison-3.C: Likewise.
	* g++.dg/warn/Wstring-literal-comparison-4.C: Likewise.

2005-12-06  Roger Sayle  <roger@eyesopen.com>

	PR c++/25263
	* g++.dg/other/array2.C: New test case.

2005-12-05  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/darwin-weakimport-3.c: New.

	* g++.old-deja/g++.abi/vtable2.C: Make weakrefs static.
	* gcc.dg/attr-weakref-1.c: Modify to not try to test public weakrefs,
	and to work on Darwin.
	* gcc.dg/attr-weakref-1b.c: New file.
	* gcc.dg/attr-weakref-2.c: New test.
	* gcc.dg/darwin-weakref-1.c: New test.

2005-12-05  Janis Johnson  <janis187@us.ibm.com>

	PR testsuite/25247
	* lib/target-supports-dg.exp (dg-skip-if): Fix target selector for
	use in selector expressions.
	(dg-xfail-if): Ditto.
	* gcc.test-framework/dg-dot-run-sif-exp-P.c: New test.
	* gcc.test-framework/dg-dot-run-sif-exp-U.c: New test.
	* gcc.test-framework/dg-dot-run-xif-exp-P.c: New test.
	* gcc.test-framework/dg-dot-run-xif-exp-XP.c: New test.
	* gcc.test-framework/test-framework.exp: Skip generated tests if
	CHECK_TEST_FRAMEWORK is not 1.

2005-12-05  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR tree-optimization/24963
	* gcc.dg/vect/vect-62.c: Remove outdated dg-line.

	PR target/24108
	* gcc.dg/vect/vect-76.c: Do not XFAIL on vect_no_align platforms.

	PR target/18580
	* gcc.dg/vect/vect-reduc-1char.c: XFAIL on vect_no_int_max platforms.
	* gcc.dg/vect/vect-reduc-2short.c: Likewise.
	* gcc.dg/vect/vect-reduc-1short.c: Likewise.
	* gcc.dg/vect/vect-reduc-2char.c: Likewise.
