@@ -1,3 +1,12 @@
+2005-12-07  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/19397
+	* g++.dg/template/typedef3.C: New test.
+
+	PR c++/19762
+	PR c++/19764
+	* g++.dg/template/dtor3.C: Fix error markers.
+
 2005-12-07  Adrian Straetling  <straetling@de.ibm.com>
 
 	* lib/target-supports.exp (check_effective_target_sync_char_short):
